; ModuleID = '/home/carl/AnghaBench/zstd/tests/extr_poolTests.c_fn.c'
source_filename = "/home/carl/AnghaBench/zstd/tests/extr_poolTests.c_fn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.data = type { i32*, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @fn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fn(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.data*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.data*
  store %struct.data* %5, %struct.data** %3, align 8
  %6 = load %struct.data*, %struct.data** %3, align 8
  %7 = getelementptr inbounds %struct.data, %struct.data* %6, i32 0, i32 2
  %8 = call i32 @ZSTD_pthread_mutex_lock(i32* %7)
  %9 = load %struct.data*, %struct.data** %3, align 8
  %10 = getelementptr inbounds %struct.data, %struct.data* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = trunc i64 %11 to i32
  %13 = load %struct.data*, %struct.data** %3, align 8
  %14 = getelementptr inbounds %struct.data, %struct.data* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = load %struct.data*, %struct.data** %3, align 8
  %17 = getelementptr inbounds %struct.data, %struct.data* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = getelementptr inbounds i32, i32* %15, i64 %18
  store i32 %12, i32* %19, align 4
  %20 = load %struct.data*, %struct.data** %3, align 8
  %21 = getelementptr inbounds %struct.data, %struct.data* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = add i64 %22, 1
  store i64 %23, i64* %21, align 8
  %24 = load %struct.data*, %struct.data** %3, align 8
  %25 = getelementptr inbounds %struct.data, %struct.data* %24, i32 0, i32 2
  %26 = call i32 @ZSTD_pthread_mutex_unlock(i32* %25)
  ret void
}

declare dso_local i32 @ZSTD_pthread_mutex_lock(i32*) #1

declare dso_local i32 @ZSTD_pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
